# 4sight

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  package-lock.json  package.json
.github/workflows/: check-backend.yml  deploy-backend.yml
4sight/: app.config.ts  app.json  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
4sight/app/: _layout.tsx  device.tsx  index.tsx  pairing.tsx
4sight/components/: RadarChart.tsx  TimeRuler.tsx  TrendGraph.tsx  window-result-view.tsx
4sight/constants/: sensor.ts  theme.ts
4sight/hooks/: use-bluetooth.ts  use-color-scheme.ts  useGlasses.ts
backend/: CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/routers/: poke.py  vision.py
backend/app/services/: caption_store.py  poke.py  vision_inference.py
backend/modal/: gemma3_vlm_app.py  streaming_vlm_app.py
backend/scripts/: replay_video_to_vision_ws.py
backend/tests/: test_caption_store.py  test_health.py  test_poke_router.py  test_poke_service.py  test_vision.py  test_vision_inference_service.py
backend/worker/: package.json  pnpm-lock.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
backend/worker/migrations/: 0001_create_biometrics.sql  0002_create_caption_windows.sql  0003_create_interventions.sql  0004_add_poke_columns_to_interventions.sql
backend/worker/src/: index.ts
biometric_model/: api.py  export_for_mobile.py  predict.py  processing_pipeline.py  requirements.txt  risk.py  test_api.py  test_data.json  train_combined.py
firmware/: 4sight.js
(+98 files in other folders)
